--- a/Project-1/css/style.css
+++ b/Project-1/css/style.css
@@ -262,3 +262,17 @@ overflow: hidden;
 }
 
 
+.sunrotation {
+    animation: rotate 2s ease 1 forwards;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
