corrected some dalse urls

--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -117,7 +117,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background-image: url(../media/3dobjects/vecteezy_ai-generated-black-liquid-splashing-png-isolated-on_36743770.png);
+    background-image: url(media/3dobjects/vecteezy_ai-generated-black-liquid-splashing-png-isolated-on_36743770.png);
     background-size: cover;
     background-position: center;
     
